# mtcnn

./: CMakeLists.txt  Makefile  README.md  setup.py
src/core/: common.h  cp2tform.cpp  mtcnn.cpp  mtcnn.h
src/models/: MTCNN_det1.caffemodel  MTCNN_det1.prototxt  MTCNN_det2.caffemodel  MTCNN_det2.prototxt  MTCNN_det3.caffemodel  MTCNN_det3.prototxt  MTCNN_det4.caffemodel
src/python/: __init__.py  mtcnn.py  test.py
